--- a/java/src/main/resources/application.properties
+++ b/java/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # datasource connection properties
-spring.datasource.url=jdbc:postgresql://localhost:5432/final_review
+spring.datasource.url=jdbc:postgresql://localhost:5432/pokedex
 spring.datasource.name=final_review
 spring.datasource.username=postgres
 spring.datasource.password=postgres1
